# TodoApp-Python-FastAPI-Uvicorn-SQLModel-Psycopg-Neon

./: README.md
fastapi-neon/: .env  pyproject.toml
fastapi-neon/fastapi_neon/: main.py  settings.py
